add sign API